Flag compilation makefile

--- a/Module 01/ex02/Makefile
+++ b/Module 01/ex02/Makefile
@@ -4,7 +4,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 
 NAME	=	zombie
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
