--- a/Module 01/ex05/Makefile
+++ b/Module 01/ex05/Makefile
@@ -7,7 +7,7 @@ LINK	=	-I/Karen.hpp
 
 NAME	=	karen
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
