--- a/Module 01/ex04/Makefile
+++ b/Module 01/ex04/Makefile
@@ -6,7 +6,7 @@ LINK	=	-I/replace.hpp
 
 NAME	=	replace
 CC		=	clang++
-CFLAGS	=	#-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
