--- a/Module 02/ex00/Makefile
+++ b/Module 02/ex00/Makefile
@@ -5,7 +5,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 
 NAME	=	fixed
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
