--- a/Module 03/ex02/Makefile
+++ b/Module 03/ex02/Makefile
@@ -9,7 +9,7 @@ LINK	=	-I/ClapTrap.hpp -I/ScavTrap.hpp -I/FragTrap.hpp
 
 NAME	=	fragtrap
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
