--- a/Module 04/ex00/Makefile
+++ b/Module 04/ex00/Makefile
@@ -11,7 +11,7 @@ LINK	=	-I/Animal.hpp -I/Dog.hpp -I/Cat.hpp -I/WrongAnimal.hpp
 
 NAME	=	Animal
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
