--- a/Module 04/ex01/Makefile
+++ b/Module 04/ex01/Makefile
@@ -10,7 +10,7 @@ LINK	=	-I/Animal.hpp -I/Dog.hpp -I/Cat.hpp
 
 NAME	=	Animal
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
