--- a/Module 05/ex01/Makefile
+++ b/Module 05/ex01/Makefile
@@ -7,7 +7,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 LINK	=	-I/Bureaucrat.hpp -I/Form.hpp
 NAME	=	Bureaucrat
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
