--- a/Module 05/ex02/Makefile
+++ b/Module 05/ex02/Makefile
@@ -10,7 +10,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 LINK	=	-I/Bureaucrat.hpp -I/Form.hpp -I/ShrubberyCreationForm.hpp -I/RobotomyRequestForm.hpp -I/PresidentialPardonForm.hpp
 NAME	=	Bureaucrat
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
@@ -25,6 +25,7 @@ $(OBJS) : Bureaucrat.hpp Form.hpp ShrubberyCreationForm.hpp RobotomyRequestForm.
 
 clean :
 	$(RM) $(OBJS)
+	$(RM) *_shrubbery
 
 fclean : clean
 	$(RM) $(NAME)
