--- a/Module 06/ex00/Makefile
+++ b/Module 06/ex00/Makefile
@@ -6,7 +6,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 LINK	=	-I/Convert.hpp
 NAME	=	Convert
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
