--- a/Module 07/ex01/Makefile
+++ b/Module 07/ex01/Makefile
@@ -5,7 +5,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 LINK	=	-I/inter.hpp
 NAME	=	inter
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
