--- a/Module 05/ex03/Makefile
+++ b/Module 05/ex03/Makefile
@@ -26,6 +26,7 @@ $(OBJS) : Bureaucrat.hpp Form.hpp ShrubberyCreationForm.hpp RobotomyRequestForm.
 
 clean :
 	$(RM) $(OBJS)
+	$(RM) *_shrubbery
 
 fclean : clean
 	$(RM) $(NAME)
