--- a/Module 08/ex01/Makefile
+++ b/Module 08/ex01/Makefile
@@ -6,7 +6,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 LINK	=	-I/Span.hpp
 NAME	=	Span
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
