--- a/Module 08/ex00/Makefile
+++ b/Module 08/ex00/Makefile
@@ -5,7 +5,7 @@ OBJS	=	$(SRCS:.cpp=.o)
 LINK	=	-I/easyfind.hpp
 NAME	=	easyfind
 CC		=	clang++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
 
 all : $(NAME)
